# SpeakShift2

./: .gitignore  COMMANDS_AND_USAGE.md  DETAILED_USAGE.md  README.md  SpeakShift_Pitch.md  next.config.ts  package-lock.json  package.json  prompt-new.txt  tsconfig.json
.github/workflows/: bench.yaml  build-linux-cuda.yml  build-linux-rocm.yml  build-macos-coreml.yml  build-macos-cpu.yml  build-windows-cuda.yml  build-windows-rocm.yml
bak/: README.md
bak/backend/src-tauri/src/: qwen-rs-new.rs  qwen.rs.bak
bak/ui/src/components/: CreateDubbingModal.tsx  CreateVoiceModal.tsx  VoiceCard.tsx  VoiceOrb.tsx
bak/ui/src/lib/: audioVoiceDb.ts
src-tauri/: Cargo.toml  build.rs  project-cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/batch/: page.tsx
src/app/convert/: page.tsx
src/app/diarization/: page.tsx
src/app/diarization/detail/: page.tsx
src/app/dubbings/: page.tsx
src/app/profile/: page.tsx
src/app/settings/: page.tsx
src/app/transcribe/: page.tsx
src/app/transcriptions/: page.tsx
src/app/translations/: page.tsx
src/app/voices/: page.tsx
src/components/: AppShellClient.tsx  DiarizationDetailPageClient.tsx  ErrorReporter.tsx  FFmpegProcessor.tsx  FileTranscriber.tsx  OnboardingCard.tsx  Sidebar.tsx  TranscriptionDetailPageClient.tsx  TranslationsDetailClient.tsx  WhisperTranscriber.tsx
src/lib/: IntlProvider.tsx  events.ts  language_keys.tsx  toast.tsx  transcriptionDb.ts  utils.ts
src/lib/hooks/: useTranscriptionListener.ts
src/messages/: ar.json  de.json  en.json  es.json  fr.json  he.json  hi.json  zh.json
(+8 files in other folders)
