[package]
name = "speakShift"
version = "0.1.0"
description = "A modern desktop studio for creators."
authors = ["Maxin Labs"]
edition = "2021"
build = "build.rs"
[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
bytes = "1.11.1"
ndarray = "0.17.2"
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.3"

base64 = "0.22"
tauri-plugin-shell = "2.0.0-beta"
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tempfile = "3.10"
which = "6.0"
hound = "3.5.1"
directories = "5.0"
reqwest = { version = "0.12", features = ["stream"] }
tokio-stream = "0.1"
futures-util = "0.3"
once_cell = "1.19"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
parakeet-rs = { version = "=0.2.9", features = ["sortformer", "cuda"] , default-features = false}
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
sysinfo = "0.37.2"
walkdir = "2.5.0"
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["cuda"]
cuda = ["parakeet-rs/cuda"]
rocm = ["parakeet-rs/rocm"]
directml = ["parakeet-rs/directml"]
tensorrt = ["parakeet-rs/tensorrt"]
gpu = ["parakeet-rs/cuda", "parakeet-rs/directml"]

[[bin]]
name = "speakShift"
path = "src/main.rs"
